# PolarImGui

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Menu.h  native-lib.cpp
app/src/main/cpp/ByNameModding/: BNM.cpp  BNM_settings.hpp
app/src/main/cpp/Data/Fonts/: Roboto-Regular.h
app/src/main/cpp/Hooking/: Hooks.h  JNIHooks.h
app/src/main/cpp/ImGui/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl2.cpp  imgui_widgets.cpp
app/src/main/cpp/Misc/: ESP.h  FileWrapper.h  FunctionPointers.h  ImGuiStuff.h  JNIStuff.h  Logging.h  Utils.h
app/src/main/cpp/Obfuscation/: Custom_Obfuscate.h  Obfuscate.h  instr.cpp  instr.h
app/src/main/cpp/Unity/: Input.h  Screen.h  Touch.h  Unity.h
app/src/main/cpp/http/cpr/: api.h  async.cpp  auth.cpp  bearer.cpp  cookies.cpp  cookies.h  cpr.h  cprtypes.cpp  cprver.h  curl_container.cpp  curl_container.h  curlholder.cpp  error.cpp  error.h  interceptor.cpp  interceptor.h  interface.h  multipart.cpp  parameters.cpp  payload.cpp  proxies.cpp  proxyauth.cpp  proxyauth.h  redirect.cpp  response.cpp  response.h  session.cpp  session.h  threadpool.cpp  timeout.cpp  unix_socket.cpp  util.cpp  util.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: Monitor All.cmd  Monitor.cmd  patch.ps1
